文章の変更

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
 
   <div class="quiz-container">
-    <h1>クイズアプリ</h1>
+    <h1>？クイズ？</h1>
 
-    <h2 id="question">ここに問題が表示されます</h2>
+    <h2 id="question">ここに問題を表示</h2>
 
     <div id="answer-buttons">
       <button class="btn">選択肢1</button>
